--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -17,7 +17,7 @@
         <div th:if="${param.logout}">
             <p>Vous avez été déconnecté avec succès.</p>
         </div>
-        <form th:action="@{/login}" method="post" class="form-horizontal">
+        <form th:action="@{/login}" method="post" class="form-horizontal" style="width: 100%">
             <div class="form-group">
                 <label for="username" class="col-sm-2 control-label">User Name</label>
                 <div class="col-sm-10">
