--- a/src/main/resources/templates/bidList/add.html
+++ b/src/main/resources/templates/bidList/add.html
@@ -32,8 +32,10 @@
 			<div class="form-group">
 				<label for="bidQuantity" class="col-sm-2 control-label">Bid Quantity</label>
 				<div class="col-sm-10">
-					<input type="number" th:field="*{bidQuantity}" id="bidQuantity" placeholder="Bid Quantity" class="col-4">
-					<p class="text-danger" th:if="${#fields.hasErrors('bidQuantity')}" th:errors="*{bidQuantity}"></p>
+					<input type="text" th:field="*{bidQuantity}" id="bidQuantity" placeholder="Bid Quantity" class="col-4">
+					<p class="text-danger" th:if="${#fields.hasErrors('bidQuantity')}">
+						Format de nombre invalide. Veuillez entrer un nombre au format monétaire.
+					</p>
 				</div>
 			</div>
 
