--- a/src/main/resources/templates/curvePoint/update.html
+++ b/src/main/resources/templates/curvePoint/update.html
@@ -25,14 +25,18 @@
 				<label for="term" class="col-sm-2 control-label">Term</label>
 				<div class="col-sm-10">
 					<input type="text" th:field="*{term}" id="term" placeholder="Term" class="col-4">
-					<p class="text-danger" th:if="${#fields.hasErrors('term')}" th:errors="*{term}"></p>
+					<p class="text-danger" th:if="${#fields.hasErrors('term')}">
+						Format de nombre invalide. Veuillez entrer un nombre au format monétaire.
+					</p>
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="value" class="col-sm-2 control-label">Value</label>
 				<div class="col-sm-10">
 					<input type="text" th:field="*{value}" id="value" placeholder="Value" class="col-4">
-					<p class="text-danger" th:if="${#fields.hasErrors('value')}" th:errors="*{value}"></p>
+					<p class="text-danger" th:if="${#fields.hasErrors('value')}">
+						Format de nombre invalide. Veuillez entrer un nombre au format monétaire.
+					</p>
 				</div>
 			</div>
 
